Code refactoring: The directory structure of the client-side assets and scripts has chaged and some technical issues have been resolved.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 /.idea
+/.vscode
+
 /vendor
-/composer.lock
 /node_modules
+/composer.lock
 /package-lock.json
+
+/public/dist
+/web-client/autoconfig
