--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "manga",
     "graphics"
   ],
-  "author": "Milad Nia <milad@miladnia.ir>",
+  "author": "Milad Abdollahnia <miladniaa@gmail.com>",
   "license": "MIT",
   "engines": {
     "node": ">=6.11.5"
@@ -21,8 +21,5 @@
   "devDependencies": {
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.2"
-  },
-  "dependencies": {
-    "jquery": "^1.12.4"
   }
 }
